hphp/hack/test/typecheck/modules/newtype_internal_bad.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
new module foo {}
module foo;
internal class FooInternal {}
newtype FooAlias = FooInternal;
newtype FooAliasWrong as FooInternal = FooInternal;
class EntFoo {
  const type TValue = FooAlias;
}
